# cavity-OAT

./: AGENTS.md  developer.ipynb  jump-rate.ipynb  main.ipynb  main_new.ipynb  parser.py  pyproject.toml  squeezing_parameter.py  utils.py
common/: __init__.py  moment_utils.py  parser.py  plotting.py  plotting_index_utils.py  plotting_legacy.py  plotting_utils.py  utils.py  utils_parameters.py  utils_plotting.py
docs/: TODOs.md  build_tex.sh  paper_inhomogeneous_couplings.md  paper_key_equations.md  paper_theory_notes.md
mfe/: __init__.py  j_moments.py  parser.py  sim.py  solver.py  utils.py
notebooks/: bright_dark_modes_mfe.ipynb  finite_size_effects.ipynb  finite_size_effects_mfe_residuals.ipynb  h_v_inh_mfe.ipynb  mfe_parameter_scaling.ipynb  parameter_ramp_mcwf.ipynb  parameter_ramp_mfe.ipynb  twa_comparisson.ipynb
parser/: __init__.py  bloch_vector.py  common.py  harmonic_analysis.py  j_modes.py  j_moments.py  mcwf.py  mfe.py  mfe_residuals.py  moments.py  quantum_trajectories.py  qutip.py
post_analysis/: __init__.py  harmonic_analysis.py  j_modes.py  mfe_residuals.py  theory_benchmarks.py
quantum_trajectories/: aggregator.py  dephasing_diagnostics.py  ensamble_sim.py  inhomogeneous_diagnostics.py  j_moments.py  mfe_residuals.py  operator_helpers.py  parser.py  plotting.py  plotting_diagnostics.py  plotting_j_moments.py  plotting_mfe_residuals.py  plotting_utils.py  run_sim.py  sim.py  squeezing.py  state_helpers.py  theory_validation.py  utils.py
quantum_trajectories_qutip/: aggregator.py  models.py  plotting.py  sim.py  utils.py
slurm/: combine_mcwf_j_moments.py  (+9 more)
(+117 files in other folders)
